[package]
name = "dcs-rich-presence"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
ctrlc = { version = "3.4.7", features = ["termination"] }
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence.git" }
phf = { version = "0.12.1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
