[package]
name = "dcs-rich-presence"
version = "1.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-std = "1.13.2"
ctrlc = { version = "3.4.7", features = ["termination"] }
dark-light = "2.0.0"
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence.git" }
iced = "0.13.1"
phf = { version = "0.12.1", features = ["macros"] }
time = { version = "0.3.41", features = [
    "formatting",
    "local-offset",
    "macros",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
